Refactor User and UserService classes to remove unused fields and improve clarity